# quilter

./: .gitignore  .travis.yml  Cargo.toml  ISSUE_TEMPLATE.md  README.md  build.sh  io.github.lainsce.Quilter.doap  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
_build/: .ninja_deps  .ninja_log  as-resources.c  build.ninja  compile_commands.json  config.h  io.github.lainsce.Quilter
_build/data/: io.github.lainsce.Quilter.appdata.xml  io.github.lainsce.Quilter.desktop
_build/io.github.lainsce.Quilter.p/src/: Application.c  MainWindow.c
_build/io.github.lainsce.Quilter.p/src/Constants/: AppSettings.c
_build/io.github.lainsce.Quilter.p/src/Plugins/: Checkbox.c  CheckboxChecked.c  Filep.c  Highlighter.c  Image.c  Plugin.c  PluginManager.c  Subscript.c  Superscript.c
_build/io.github.lainsce.Quilter.p/src/Services/: DialogUtils.c  ExportUtils.c  FileManager.c
_build/io.github.lainsce.Quilter.p/src/Styles/: quilter.c  quilterdark.c  quiltersepia.c
_build/io.github.lainsce.Quilter.p/src/Widgets/: HeaderBar.c  HeaderBarButton.c  Preferences.c  SearchBar.c  SideBar.c  SideBarBox.c  SourceView.c  StatusBar.c  WebView.c
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: coredata.dat.prev
_build/po/: ca.gmo  da.gmo  de.gmo  eo.gmo  es.gmo  fr.gmo  it.gmo  ja.gmo  lt.gmo  nl.gmo  pl.gmo  pt_BR.gmo  ru.gmo
build-aux/: com.github.lainsce.Quilter.json  com.github.lainsce.QuilterDevel.json  com.github.lainsce.quilter.json
build-aux/flatpak/: io.github.lainsce.Quilter.json
data/: app.gresource.xml  com.github.lainsce.quilter.appdata.xml  com.github.lainsce.quilter.appdata.xml.in  com.github.lainsce.quilter.desktop  com.github.lainsce.quilter.desktop.in  com.github.lainsce.quilter.gresource.xml  com.github.lainsce.quilter.gschema.xml  io.github.lainsce.Quilter.appdata.xml.in  io.github.lainsce.Quilter.desktop.in  io.github.lainsce.Quilter.gschema.xml  meson.build  quilter.appdata.xml.in  style-hc.css  style.css
data/highlight.js/styles/: dark.min.css
data/html/: template.html
data/icons/64/: tags.zT3R4M
data/plugin/center_headers/: cheaders.css
data/plugin/font/: mono.css  sans.css  serif.css
data/plugin/highlight.js/lib/: highlight.min.js
data/plugin/highlight.js/styles/: dark.min.css  default.min.css  sepia.min.css
data/plugin/katex/: auto.js  auto.min.js  katex-autorender.js  katex.css  katex.js  user.js
data/plugin/mermaid/: mermaid.js
data/schemes/: com.github.lainsce.quilter-sepia.xml  io.github.lainsce.Quilter-dark.xml  io.github.lainsce.Quilter-sepia.xml  io.github.lainsce.Quilter.xml  quilter-dark.xml  quilter-moon.xml  quilter-sepia.xml  quilter.xml  quilterdark.xml
data/styles/: app-font-stylesheet.css  app-handy-stylesheet.css  app-main-stylesheet.css  app-stylesheet-dark.css  app-stylesheet-moon.css  app-stylesheet-sepia.css  app-stylesheet.css  app.css  dark.css  light.css  sepia.css  style.css
data/ui/: cheatsheet.ui  header_button.ui  headerbar.ui  listboxrow.ui  main_view.ui  main_window.ui  menu_popover.ui  prefs_window.ui  searchbar.ui  shortcuts.ui  sidebar.ui  sidebarbox.ui  statusbar.ui  view_popover.ui  viewmenu.ui  window.ui
data/wordlist/: adjective.txt  adverb.txt  conjunction.txt  noun.txt  nouns.txt  verb.txt
debian/: changelog  control  copyright  rules
flatpak/: com.github.lainsce.quilter.json
hooks/: pre-commit.hook
meson/: post_install.py
po/: .ca.po.swp  LINGUAS  POTFILES  POTFILES.in  README.md  ca.mo  ca.po  com.github.lainsce.quilter.pot  da.po  de.po  eo.po  es.po  fr.po  hr.po  io.github.lainsce.Quilter.pot  it.po  ja.po  lt.po  meson.build  nl.po  nl_NL.po  pl.po  pt_BR.po  ru.po  tr.po
po/extra/: LINGUAS  POTFILES  ca.po  da.po  de.po  eo.po  es.po  extra.pot  fr.po  hr.po  io.github.lainsce.Quilter.pot  it.po  ja.po  lt.po  nl.po  nl_NL.po  pl.po  pt_BR.po  ru.po
src/: Application.vala  MainWindow.vala  app.rs  config.rs  config.rs.in  main.rs  meson.build  static_resources.rs  static_resources.rs.in  utils.rs
src/Constants/: AppSettings.vala  FocusMode.vala  Stylesheet.vala
src/Plugins/: Checkbox.vala  CheckboxChecked.vala  Filep.vala  Highlighter.vala  Image.vala  Math.vala  Plugin.vala  PluginManager.vala  Subscript.vala  Superscript.vala
src/Services/: DialogUtils.vala  ExportUtils.vala  FileManager.vala  FileUtils.vala  OpenFile.vala
src/Styles/: quilter.vala  quilterdark.vala  quiltermoon.vala  quiltersepia.vala
src/Utils/: DialogUtils.vala  FileUtils.vala
src/Widgets/: Cheatsheet.vala  HeaderBar.vala  HeaderBarButton.vala  Preferences.vala  SearchBar.vala  SideBar.vala  SideBarBox.vala  SideHeaderBar.vala  Sidebar.vala  SourceView.vala  StatusBar.vala  Toolbar.vala  WebView.vala  WindowView.vala
src/components/: cheatsheet.rs  css.rs  header.rs  listboxrow.rs  mod.rs  popover.rs  prefs_window.rs  searchbar.rs  sidebar.rs  utils.rs  view.rs  viewpopover.rs  window.rs  window_state.rs
src/components/styles/: app.css  light.css
src/settings/: key.rs  mod.rs  settings_manager.rs
vapi/: libmarkdown.vapi  mkdio.h
